fixed cockpit dataset table expander not aligned

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_table.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_table.scss
@@ -10,6 +10,9 @@
 			th{
 				border-bottom: 1px solid $ternaryColor;
 				text-align: left;
+				&.tableAction{
+					width: 50px;
+				}
 				&.multiTableAction{
 					width: 100px;
 				}
